<resources>

    <string name="app_name">Abarrotes</string>

    <string name="login_user">Usuario</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_name">Abarrotes</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login">Iniciar Sesión</string>
    <string name="login_forgot_action">¿Olvidaste tu contraseña?</string>
    <string name="login_create_account_question">¿No tienes cuenta?</string>
    <string name="login_create_account_action">Regístrate.</string>

    <string name="register_email">Correo electrónico</string>
    <string name="register_name">Nombre</string>
    <string name="register_password">Contrasena</string>
    <string name="register_register">Registrar</string>
    <string name="register_sex_m">Masculino</string>
    <string name="register_sex_f">Femenino</string>
    <string name="register_sex_o">Otro</string>

    <string name="forgot_password_recover">Recupera tu cuenta</string>
    <string name="forgot_password_account">Ingresa tu correo electrónico vinculado a tu cuenta.</string>
    <string name="forgot_password_send">Enviar</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">Kcsogp0q6eCS30a7Z84MXMzgtdcqoRPmNbnUmuvx</string>
    <string name="back4app_client_key">y92AE7wlclY2OoJKZ2tMrcw4KQ8KD8YRfMNQMKNt</string>

    <string name="search_map">Buscar lugar o dirección</string>
    <string name="search_map_button">Buscar</string>

    <string name="profile_text">Perfil</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_email">Correo</string>

    <string name="menu_text">Abarrotes es un App mexicana que busca promover el consumo local.
    Abarrotes un sabor local
    </string>
    <string name="profile_button_logout">Log Out</string>

</resources>