<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:padding="25dp"
    tools:context=".activities.ActivityLogin">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/login_iv_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/login_iv_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/whiteTextColor"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/login_name"
        app:layout_constraintBottom_toTopOf="@id/login_til_username"
        app:layout_constraintTop_toTopOf="@id/login_iv_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_username"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_user"
        app:layout_constraintBottom_toTopOf="@id/login_til_email"
        app:layout_constraintTop_toBottomOf="@id/login_iv_register"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tiet_username"
            style="@style/LoginTextInputEditStyle"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        app:layout_constraintBottom_toTopOf="@id/login_til_password"
        app:layout_constraintTop_toBottomOf="@id/login_til_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tiet_email"
            style="@style/LoginTextInputEditStyle"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tiet_password"
            style="@style/LoginTextInputEditStyle"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/login_tv_forgot_action"
        app:layout_constraintTop_toBottomOf="@id/login_til_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_tv_forgot_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteTextColor"
        android:gravity="center"
        android:text="@string/login_forgot_action"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_tv_create_account_question"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_tv_create_account_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteTextColor"
        android:text="@string/login_create_account_question"
        app:layout_constraintTop_toBottomOf="@id/login_tv_forgot_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_tv_create_account_action"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_tv_create_account_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteTextColor"
        android:layout_marginStart="10dp"
        android:text="@string/login_create_account_action"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/login_tv_create_account_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_tv_create_account_question"
        app:layout_constraintTop_toTopOf="@id/login_tv_create_account_question" />

</androidx.constraintlayout.widget.ConstraintLayout>

